@@ -12,3 +12,4 @@ t/release-pod-syntax.t
 t/test10-call.sql
 t/test10-call.t
 examples/example.pl
+scripts/pg_proc_jsonrpcd
